modified the file

--- a/test.html
+++ b/test.html
@@ -2,3 +2,7 @@
   <h1>manikandan</h1>
 </center>
 <hr>
+
+<p> 
+  K. Manikandan is an Indian screenwriter and actor who works in the Tamil film industry. He is best known of his characters in Jai Bhim, Good Night, Lover and Kudumbasthan
+</p>
